[battedball changelog]
2016.12.08
- using battedball.py from testcode as base
- setting global playercount
	- only dictionaries and lists are mutable objects
		- modification modifies the original value
	- numbers, strings, tuples are local scope
	source: http://stackoverflow.com/questions/15078519/python-dictionary-passed-as-an-input-to-a-function-acts-like-a-global-in-that-fu